--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "core-js": "^3.8.3",
+    "emailjs": "^4.0.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "vue": "^3.2.13",
