--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,15 +8,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-        matrix:
-          node-version: [18]
+      matrix:
+        node-version: [18]
 
     steps:
       - uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v2
         with:
-            version: 8
+          version: 7.29
 
       - name: setup git config
         run: |
@@ -26,8 +26,8 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-            node-version: ${{ matrix.node-version }}
-            cache: 'pnpm'
+          node-version: ${{ matrix.node-version }}
+          cache: "pnpm"
 
       - name: Install dependecies
         run: pnpm install
