--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,18 @@ on:
   push:
     branches: [main]
 
+permissions:
+    contents: read
+    pages: write
+    id-token: write
+
 jobs:
   build:
+
+    environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -35,11 +45,14 @@ jobs:
       - name: Build project
         run: pnpm run build
 
-      - name: Add to subtree
-        run: |
-          git add dist
-          git commit -m "$(git log '--format=format:%H' main -1)"
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
 
-      - name: Push to subtree
-        run: |
-          git subtree push --prefix dist origin gh-pages
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: "dist/*"
+          
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
