--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 permissions:
-    contents: read
+    contents: write
     pages: write
     id-token: write
 
@@ -13,7 +13,7 @@ jobs:
   build:
 
     environment:
-        name: github-pages
+        name: gh-pages
         url: ${{ steps.deployment.outputs.page_url }}
 
     runs-on: ubuntu-latest
