--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: "Create env file"
         run: |
           touch .env
-          echo GIT_HUB_TOKEN=${{ env.GIT_HUB_TOKEN }} >> .env
+          echo GIT_HUB_TOKEN=${{ secrets.GIT_HUB_TOKEN }} >> .env
           cat .env
 
       - name: Install dependecies
